--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.MuiButton-containedPrimary {
+    margin: auto !important;
+    display: block !important;
+    width: 30%;
+    margin-bottom: 16px !important;
+}
